// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aloitusKuulutusAsiakirja should generate ilmoitus pdf succesfully SUOMI (rata) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__12R Ilmoitus aloituskuulutuksesta.pdf",
  "textContent": "VAYLA/1/2022



Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 1
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun ratasuunnitelman suunnittelun ja maastotöiden aloittamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 2.1.2022 osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus



Kuulutus on nähtävillä 2.1.2022 - 1.2.2022 välisen ajan
Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate ilmoitus pdf succesfully SUOMI (tie) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE_suunnittelusopimus_T412_1 Ilmoitus aloituskuulutuksesta.pdf",
  "textContent": "ELY/1/2022



Ilmoitus aloituskuulutuksesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman suunnittelun ja maastotöiden aloittamista. Nokia saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §)
Kuulutus julkaistaan 2.1.2022 osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus



Kuulutus on nähtävillä 2.1.2022 - 1.2.2022 välisen ajan
Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate ilmoitus pdf succesfully SUOMI (tie) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T412_1 Ilmoitus aloituskuulutuksesta.pdf",
  "textContent": "ELY/1/2022



Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman suunnittelun ja maastotöiden aloittamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 2.1.2022 osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus



Kuulutus on nähtävillä 2.1.2022 - 1.2.2022 välisen ajan
Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate ilmoitus pdf succesfully SUOMI (yleis) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_YLEINEN_suunnittelusopimus_12YS Ilmoitus aloituskuulutuksesta.pdf",
  "textContent": "ELY/1/2022



Ilmoitus aloituskuulutuksesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa julkaisee kuulutuksen, joka koskee otsikossa mainitun yleissuunnitelman suunnittelun ja maastotöiden aloittamista. Nokia saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §)
Kuulutus julkaistaan 2.1.2022 osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus



Kuulutus on nähtävillä 2.1.2022 - 1.2.2022 välisen ajan
Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (rata) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_RATA__10R Aloituskuulutus.pdf",
  "textContent": "VAYLA/1/2022



Kuulutus suunnittelun aloittamisesta
Testiprojekti 1
Väylävirasto aloittaa otsikon mukaisen ratasuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
Lorem Ipsum
Väylävirasto on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus. Kuulutus pidetään nähtävillä 2.1.2022 - 1.2.2022.



Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen rataverkon haltijalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (ratalaki 9 §).
Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (ratalaki 22 §). 
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (tie) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE_suunnittelusopimus_T412 Aloituskuulutus.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnittelun aloittamisesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa, aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
Lorem Ipsum
Nokia on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus. Kuulutus pidetään nähtävillä 2.1.2022 - 1.2.2022.



Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).
Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). 
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (tie) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_TIE__T412 Aloituskuulutus.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnittelun aloittamisesta
Testiprojekti 1
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
Lorem Ipsum
Uudenmaan ELY-keskus on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus. Kuulutus pidetään nähtävillä 2.1.2022 - 1.2.2022.



Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).
Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). 
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`aloitusKuulutusAsiakirja should generate kuulutus pdf succesfully SUOMI (yleis) (suunnittelusopimus) 1`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_YLEINEN_suunnittelusopimus_10YS Aloituskuulutus.pdf",
  "textContent": "ELY/1/2022



Kuulutus suunnittelun aloittamisesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa, aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
Lorem Ipsum
Nokia on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus. Kuulutus pidetään nähtävillä 2.1.2022 - 1.2.2022.



Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).
Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). 
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 
Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Eemil Elylainen (Pirkanmaan ELY-keskus), 
puh. 123456789, eemil.elylainen(at)ely.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;
